objects/POA__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Size__c</fullName>
        <description>Used by Haystak to denote size of dealership and service level</description>
        <inlineHelpText>CLLC - Dealer Size Clarification</inlineHelpText>
        <label>Dealer Size</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the dealer that the plan of action is needed for</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plan of Action(s)</relationshipLabel>
        <relationshipName>POA_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who is the person with authority to make decisions at this dealership</description>
        <inlineHelpText>Who is the person with authority to make decisions at this dealership regarding this POA?</inlineHelpText>
        <label>Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>POA&apos;s (Decision Maker)</relationshipLabel>
        <relationshipName>POA_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Auto-Populated from the Project Or Project Piece when the POA is Created</description>
        <inlineHelpText>Auto-Populated from Project.</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Instructions__c</fullName>
        <label>Demo Instructions (Optional)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Did_We_Launch_Correctly__c</fullName>
        <label>Did We Launch Correctly?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_We_Launch_On_Time__c</fullName>
        <label>Did We Launch On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Director_Conquest_LSE_Date__c</fullName>
        <description>Last solid engagement done by the Conquest director</description>
        <inlineHelpText>Last solid engagement done by the Conquest director</inlineHelpText>
        <label>Director Conquest LSE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Director_LSE_Age__c</fullName>
        <formula>IF( 
ISBLANK(Director_Manager_LSE_Date__c), NULL, Today()- Director_Manager_LSE_Date__c 
)</formula>
        <inlineHelpText>formula field that shows the number of days since the Director LSE</inlineHelpText>
        <label>Director LSE Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director_LSE_Type__c</fullName>
        <label>Director LSE Type</label>
        <picklist>
            <picklistValues>
                <fullName>Onsite w/ PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite w/o PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoToMeeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Director_Manager_LSE_Date__c</fullName>
        <inlineHelpText>Last solid engagement done by the Provision director</inlineHelpText>
        <label>Director Provision LSE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Director_NSE_Date__c</fullName>
        <inlineHelpText>The next scheduled solid engagement for Directors.</inlineHelpText>
        <label>Director NSE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discussed_AutoProcess__c</fullName>
        <inlineHelpText>Please log the date that you discussed the AutoProcess features with the client.</inlineHelpText>
        <label>Discussed AutoProcess</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discussed_Kore360__c</fullName>
        <description>this field was original discussed auto process - auto process is no longer an active product, per change request 7571 and 7579</description>
        <inlineHelpText>Please log the date that you discussed Kore 360 product with the client.</inlineHelpText>
        <label>Discussed Kore360</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date2__c</fullName>
        <formula>CASE(RecordTypeId, 
   &quot;01270000000Q8PX&quot; /*New Account F/U */, 
      Week_6_F_U__c, 
   Due_Date__c
)</formula>
        <inlineHelpText>Formula, if New Account F/U uses Week 6 F/U, if not uses Assigned Due Date. USE THIS FOR ALL REPORTING</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Not valid for New Account POAs</description>
        <inlineHelpText>enter the date we promised the Dealer that we would resolve the issues</inlineHelpText>
        <label>Assigned Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_This_Week__c</fullName>
        <formula>IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( (  Intro_Call_Due_Date_2__c - DATEVALUE(&quot;2006-01-01&quot; ))/7),52),  Intro_Call_Due_Date_2__c ,
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( Week_1_F_U__c - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), Week_1_F_U__c,
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( Week_2_F_U__c - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), Week_2_F_U__c,
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( Week_3_F_U__c - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), Week_3_F_U__c,
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( Week_4_F_U__c - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), Week_4_F_U__c,
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( Week_5_F_U__c - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), Week_5_F_U__c,
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( Week_6_F_U__c - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), Week_6_F_U__c,
NULL
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date for This Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Barometer__c</fullName>
        <description>Scoring to rate the current state of the dealer relationship.</description>
        <inlineHelpText>Scoring to rate the current state of the dealer relationship.</inlineHelpText>
        <label>Engagement Barometer</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Go_Live_Date__c</fullName>
        <label>Estimated Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Confirmation_Call_Complete__c</fullName>
        <label>Final Confirmation Call Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Budget_Amount__c</fullName>
        <label>First Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_MRR__c</fullName>
        <formula>Dealer__r.GL_MRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the same field from the related account</inlineHelpText>
        <label>GL MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generated_by_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by Flow &apos;ATC Hotline POA&apos; when created by this flow.</description>
        <label>Generated by Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_Status__c</fullName>
        <formula>IF(
   !ISBLANK(Date_Completed__c) &amp;&amp; Date_Completed__c &lt;= Due_Date2__c+3,
   &quot;Complete On Time&quot;,
   IF(
      !ISBLANK(Date_Completed__c) &amp;&amp; Date_Completed__c &gt; Due_Date2__c+3,
      &quot;Completed Late&quot;,
         IF(
            Due_Date2__c  &gt; (Today() +30), 
            &quot;On Track&quot;,
            IF(
               Due_Date2__c &gt; (Today() +14), 
               &quot;Due 2 Weeks&quot;,
                  IF(
                  Due_Date2__c &gt; (Today() +7), 
                  &quot;Due Next Week&quot;,
                  IF(
                     Due_Date2__c+3 &lt; Today(),
                     &quot;Past Due&quot;,
                     &quot;Due Now&quot;
               )
            )
         )
      )
   )
)</formula>
        <inlineHelpText>formula field that looks at the Date Completed and calculates the goal status</inlineHelpText>
        <label>Goal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HY_Contract_End_Date__c</fullName>
        <description>What Date did this contract terminate?</description>
        <inlineHelpText>When was this Contract cancelled?</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HY_Contract_Start_Date__c</fullName>
        <description>Date Customer Contract Began. Shoudl be pulled from Opportunity Contract.</description>
        <inlineHelpText>When did Customer Start?</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HY_Sales_Person__c</fullName>
        <description>name of Sales Rep who sold this contract</description>
        <inlineHelpText>Who sold this to the customer?</inlineHelpText>
        <label>Haystak Salesperson</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HaystaK_SA_Flair__c</fullName>
        <formula>IF( ISPICKVAL(Dealer__r.Haystak_Strategic_Account__c,&quot;Yes&quot;),IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021ew4&amp;oid=00D700000008zHZ&amp;lastMod=1430246035000&quot;,&quot;Strategic&quot;) , NULL)</formula>
        <inlineHelpText>formula field that looks at the account field &quot; Haystak Strategic Account?&quot;, if yes, displays an image</inlineHelpText>
        <label>Strategic Account Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Compliance_Count__c</fullName>
        <description>Haystak</description>
        <formula>IF(  Haystak_Contact_Compliance__c  = &quot;On Track&quot;, True, False)</formula>
        <label>Haystak LSE Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Haystak_Contact_Compliance__c</fullName>
        <description>Haystak</description>
        <formula>IF( 
OR( 
AND(ISPICKVAL( Preferred_Frequency_of_Contact__c , &quot;Monthly&quot;),Last_Solid_Engagement_Age__c &gt; 30), 
AND(ISPICKVAL( Preferred_Frequency_of_Contact__c , &quot;Weekly&quot;),Last_Solid_Engagement_Age__c &gt; 7), 
AND(ISPICKVAL( Preferred_Frequency_of_Contact__c , &quot;Bi-Weekly&quot;), Last_Solid_Engagement_Age__c &gt; 14),
ISBLANK( Last_Solid_Engagement__c )
),
 
&quot;Needs a Call&quot;, &quot;On Track&quot;)</formula>
        <inlineHelpText>formula field that looks at the Preferrred Frequency of Contact and the Last solid engagement age to determine whether the contact is on schedule or needs attention</inlineHelpText>
        <label>Haystak LSE Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Product_Type__c</fullName>
        <inlineHelpText>Haystak product type</inlineHelpText>
        <label>Haystak Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>AD Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Accelerate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Pro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Haystak_Program__c</fullName>
        <description>Haystak field to specify Product Program</description>
        <label>Haystak Program</label>
        <picklist>
            <picklistValues>
                <fullName>OEM -Chrysler (CLLC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM - Mazda (MNAO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Haystak_QC_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by Haystak</description>
        <inlineHelpText>Who QC&apos;ed this Dealer</inlineHelpText>
        <label>Haystak QC Rep</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>User not Found</errorMessage>
            <filterItems>
                <field>User.CompanyName</field>
                <operation>equals</operation>
                <value>Haystak</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>POAs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hosted_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hosted By (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hosted_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hosted by</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>0017000000cPET0</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>POA&apos;s (Hosted by)</relationshipLabel>
        <relationshipName>POA_s2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAR_Last_30_Days__c</fullName>
        <formula>IF(  Last_Utilization_Review_Age__c  &lt;= 30, True, False)</formula>
        <inlineHelpText>formula field that looks at the Last Utilization Review age and if less than or =  30 days updates the checkbox to true, used for Haystak Reporting.</inlineHelpText>
        <label>IAR Last 30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAR_Last_Month__c</fullName>
        <formula>IF( 
MONTH( Last_Utilization_Review__c ) + 1 = MONTH(TODAY()), 
TRUE, 
FALSE 
)</formula>
        <inlineHelpText>formula field that looks at the Last Utilization Review and if the date equals last month, the checkbox is updated to true, used for Haystak Reporting</inlineHelpText>
        <label>IAR Last Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAR_Last_Week__c</fullName>
        <formula>IF( 
CEILING((( Last_Utilization_Review__c  - DATE(YEAR(Last_Utilization_Review__c), 1, 1) + 1) + MOD(DATE(YEAR(Last_Utilization_Review__c), 1, 1) - DATE(1900, 1, 7), 7)) / 7) 
+1 = 
CEILING(((TODAY() - DATE(YEAR(TODAY()), 1, 1) + 1) + MOD(DATE(YEAR(TODAY()), 1, 1) - DATE(1900, 1, 7), 7)) / 7), 
TRUE, 
FALSE 
)</formula>
        <inlineHelpText>formula field that reads the Last Utilization review date and if it equals last week it updates the checkbox - used for haystak reporting</inlineHelpText>
        <label>IAR Last Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAR_This_Month__c</fullName>
        <formula>IF( 
MONTH( Last_Utilization_Review__c ) = MONTH(TODAY()), 
TRUE, 
FALSE 
)</formula>
        <inlineHelpText>formula field that looks at the Last Utilization Review date and if it is Last Month updates a checkbox, used for Haystak Reporting</inlineHelpText>
        <label>IAR This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAR_This_Week__c</fullName>
        <formula>IF( 
CEILING((( Last_Utilization_Review__c  - DATE(YEAR(Last_Utilization_Review__c), 1, 1) + 1) + MOD(DATE(YEAR(Last_Utilization_Review__c), 1, 1) - DATE(1900, 1, 7), 7)) / 7) 
= 
CEILING(((TODAY() - DATE(YEAR(TODAY()), 1, 1) + 1) + MOD(DATE(YEAR(TODAY()), 1, 1) - DATE(1900, 1, 7), 7)) / 7), 
TRUE, 
FALSE 
)</formula>
        <inlineHelpText>formula field that looks at the Last Utilization Review date and updates the checkbox if the date = this week</inlineHelpText>
        <label>IAR This Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ILM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ILM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INVENTORY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INVENTORY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Included_Display_Ad_Sets__c</fullName>
        <description>Used by Haystak</description>
        <inlineHelpText>This is the number creative ad types that are INCLUDED with this customer’s package. The rest will be billed at rate card.</inlineHelpText>
        <label>Included Display Ad Sets</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_E_Blasts__c</fullName>
        <description>Used by Haystak</description>
        <inlineHelpText>“This is the number creative ad types that are INCLUDED with this customer’s package”. The rest will be billed at rate card.</inlineHelpText>
        <label>Included E-Blasts</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_Landing_Pages__c</fullName>
        <description>Used by Haystak</description>
        <inlineHelpText>“This is the number creative ad types that are INCLUDED with this customer’s package”. The rest will be billed at rate card.</inlineHelpText>
        <label>Included Landing Pages</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_Others__c</fullName>
        <description>Used by Haystak</description>
        <inlineHelpText>“This is the number creative ad types that are INCLUDED with this customer’s package”. The rest will be billed at rate card.</inlineHelpText>
        <label>Included Others</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_Sliders__c</fullName>
        <description>Used by Haystak</description>
        <inlineHelpText>“This is the number creative ad types that are INCLUDED with this customer’s package”. The rest will be billed at rate card.</inlineHelpText>
        <label>Included Sliders</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_Specials__c</fullName>
        <description>Used by Haystak</description>
        <inlineHelpText>“This is the number creative ad types that are INCLUDED with this customer’s package”. The rest will be billed at rate card.</inlineHelpText>
        <label>Included Specials</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intro_Call_Completed__c</fullName>
        <inlineHelpText>enter the date the Intro Call was Completed</inlineHelpText>
        <label>Intro Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intro_Call_Due_Date_2__c</fullName>
        <label>Intro Call Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intro_Status__c</fullName>
        <formula>IF((TEXT (Intro_Call_Completed__c) = NULL) &amp;&amp; (Intro_Call_Due_Date_2__c -7 &gt;= today()), &quot;Pending&quot;, 
IF((TEXT (Intro_Call_Completed__c) = NULL) &amp;&amp; (Intro_Call_Due_Date_2__c -2 &lt;= today()) &amp;&amp; (today() &lt; Intro_Call_Due_Date_2__c ), &quot;Nearing Goal&quot;, 
IF((TEXT (Intro_Call_Completed__c) = NULL) &amp;&amp; (Intro_Call_Due_Date_2__c &lt;= today()) &amp;&amp; (today() &lt;= Intro_Call_Due_Date_2__c +5), &quot;Due Now&quot;, 
IF((TEXT (Intro_Call_Completed__c) = NULL) &amp;&amp; (Intro_Call_Due_Date_2__c +5 &lt; today()), &quot;Goal Missed&quot;, 
IF( Intro_Call_Completed__c &lt;= Intro_Call_Due_Date_2__c +5 &amp;&amp; !ISBLANK(Intro_Call_Completed__c), &quot;Goal Completed&quot;, 
IF( Intro_Call_Completed__c &gt; Intro_Call_Due_Date_2__c +5, &quot;Goal Missed&quot;, &quot;Pending&quot;))))))</formula>
        <label>Intro Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Business_Plans__c</fullName>
        <label>Invalid Business Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSE_Age__c</fullName>
        <formula>IF(
ISNULL(  Provision_LSE__c  ), NULL, Today()-  Provision_LSE__c  )</formula>
        <inlineHelpText>formula field used for reporting</inlineHelpText>
        <label>Provision LSE Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSE_Last_30_days__c</fullName>
        <formula>IF( Last_Solid_Engagement_Age__c &lt;= 30, True, False)</formula>
        <inlineHelpText>formula field that looks at the last solid engagement age and if less than or equal to 30 (last 30 days) then update checkbox to True</inlineHelpText>
        <label>LSE Last 30 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSE_Last_Month__c</fullName>
        <formula>IF(
   MONTH(Last_Solid_Engagement__c) + 1 = MONTH(TODAY()),
   TRUE,
   FALSE
)</formula>
        <inlineHelpText>formula field that looks at the LSE age and if occurred last calendar month, updates the checkbox to true</inlineHelpText>
        <label>LSE Last Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSE_Last_Week__c</fullName>
        <formula>IF(
   CEILING(((Last_Solid_Engagement__c - DATE(YEAR(Last_Solid_Engagement__c), 1, 1) + 1) + MOD(DATE(YEAR(Last_Solid_Engagement__c), 1, 1) - DATE(1900, 1, 7), 7)) / 7) 
+1 = 
CEILING(((TODAY() - DATE(YEAR(TODAY()), 1, 1) + 1) + MOD(DATE(YEAR(TODAY()), 1, 1) - DATE(1900, 1, 7), 7)) / 7),
   TRUE,
   FALSE
)</formula>
        <label>LSE Last Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSE_On_Time_Status__c</fullName>
        <formula>IF( 
  ISPICKVAL( POA_Status__c , &quot;Open&quot;)&amp;&amp;!ISBLANK( Last_Solid_Engagement__c ) &amp;&amp;  Last_Solid_Engagement_Age__c &lt; 31, &quot;On Schedule&quot;,
IF(
ISPICKVAL( POA_Status__c , &quot;Open&quot;)&amp;&amp; !ISBLANK( Last_Solid_Engagement__c ) &amp;&amp;  Last_Solid_Engagement_Age__c &gt; 30, &quot;Schedule Call&quot;,
NULL))</formula>
        <inlineHelpText>formula field that looks at the lse age and displays schedule call or on Track</inlineHelpText>
        <label>LSE On Time Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSE_Status_Count__c</fullName>
        <formula>IF(LSE_On_Time_Status__c = &quot;On Schedule&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field used for reporting that displays a 0 if the lse age is &gt;30 and 1 if LSE is &lt; 30</inlineHelpText>
        <label>LSE Status Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSE_Status__c</fullName>
        <formula>IF( !ISBLANK(Last_Solid_Engagement__c) &amp;&amp; Last_Solid_Engagement_Age__c &gt; 30, IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UBKB&amp;oid=00D700000008zHZ&amp;lastMod=1425083417000&quot;, &quot;Red&quot;, 20,20), 
IF( !ISBLANK(Last_Solid_Engagement__c) &amp;&amp; Last_Solid_Engagement_Age__c &lt; 31,IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021RyM&amp;oid=00D700000008zHZ&amp;lastMod=1418162444000&quot;, &quot;Green&quot;, 20,20),
IF(ISBLANK(Last_Solid_Engagement__c) &amp;&amp;  ISPICKVAL(Status__c,&quot;Working&quot;),IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UBKB&amp;oid=00D700000008zHZ&amp;lastMod=1425083417000&quot;, &quot;Red&quot;, 20,20), 
NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that looks at the field Last Solid Engagement Age and if greater than 31 days display a red examation otherwise shows a green checkmark</inlineHelpText>
        <label>LSE Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSE_This_Month__c</fullName>
        <description>formula field that looks at the LSE age and if it falls within the current month, updates the checkbox to true</description>
        <formula>IF(
   MONTH(Last_Solid_Engagement__c) = MONTH(TODAY()),
   TRUE,
   FALSE
)</formula>
        <label>LSE This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSE_This_Week__c</fullName>
        <formula>IF(
   CEILING(((Last_Solid_Engagement__c - DATE(YEAR(Last_Solid_Engagement__c), 1, 1) + 1) + MOD(DATE(YEAR(Last_Solid_Engagement__c), 1, 1) - DATE(1900, 1, 7), 7)) / 7) 
=
   CEILING(((TODAY() - DATE(YEAR(TODAY()), 1, 1) + 1) + MOD(DATE(YEAR(TODAY()), 1, 1) - DATE(1900, 1, 7), 7)) / 7),
  TRUE,
   FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that looks at the LSE age and if less than 7 days updates  the checkbox to lse within this week</inlineHelpText>
        <label>LSE This Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Budget_Amount__c</fullName>
        <inlineHelpText>updated by workflow when a budget update is created</inlineHelpText>
        <label>Last Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_CO_OP_Processed__c</fullName>
        <description>Used by Haystak to know when they last processed a payment and what still needs to be processed in a given month</description>
        <label>Last CO-OP Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Service__c</fullName>
        <label>Last Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Implementation_Date__c</fullName>
        <formula>Dealer__r.Implementation_Date__c</formula>
        <inlineHelpText>formula field that reads the Account Implementation Date - the implementation Date is always the last time the customer had onsite training related to a CRM</inlineHelpText>
        <label>Last Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_MS_Solid_Engagement_Age__c</fullName>
        <formula>TODAY() - Last_MS_Solid_Engagement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last MS Solid Engagement Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_MS_Solid_Engagement__c</fullName>
        <label>Last MS Solid Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Onsite_Visit_Age__c</fullName>
        <description>The number of days since the latest onsite visit</description>
        <formula>TODAY() - Last_Onsite_Visit__c</formula>
        <inlineHelpText>The number of days since the latest onsite visit</inlineHelpText>
        <label>Last Onsite Visit Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Onsite_Visit__c</fullName>
        <description>The date of the latest onsite visit</description>
        <inlineHelpText>The date of the latest onsite visit</inlineHelpText>
        <label>Last Onsite Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Price_Change__c</fullName>
        <label>Last Price Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Solid_Engagement_Age__c</fullName>
        <description>Number of days since the latest solid engagement made by the Performance Mgr. Formerly on the account page</description>
        <formula>TODAY() - Last_Solid_Engagement__c</formula>
        <inlineHelpText>Number of days since the latest solid engagement made by the Performance Mgr. Formerly on the account page</inlineHelpText>
        <label>Last Solid Engagement Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Solid_Engagement__c</fullName>
        <description>Formerly &quot;Last Solid Engagement by Perf Mgr&quot; on Account page</description>
        <inlineHelpText>use the log solid engagement button to update your product status and last solid engagement</inlineHelpText>
        <label>Last Solid Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Utilization_Review_Age__c</fullName>
        <description>Days since the performance mgr last conducted a utilization review on this account</description>
        <formula>TODAY() - Last_Utilization_Review__c</formula>
        <inlineHelpText>Days since the performance mgr last conducted a utilization review on this account</inlineHelpText>
        <label>Last Utilization Review Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Utilization_Review__c</fullName>
        <description>The date of the last utilization review conducted by the performance mgr on this account.</description>
        <inlineHelpText>The date of the last utilization review conducted by the performance mgr on this account.</inlineHelpText>
        <label>Last Utilization Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Call_Completed__c</fullName>
        <description>Haystak Tracking field</description>
        <label>Launch Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Hold_s_Ups__c</fullName>
        <inlineHelpText>If the answer to the question &quot;Did we launch on time&quot; equals No, then please provide details as to the issues</inlineHelpText>
        <label>Launch Hold-Ups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Issue_Notes__c</fullName>
        <inlineHelpText>if the user answers No to question &quot;did we launch correctly, user is required to enter notes</inlineHelpText>
        <label>Launch Issue Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>